Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -186,5 +186,6 @@
   "dn16:1.18.6": "otrov žudnje za čulnim zadovoljstvima, otrov žudnje za večnim postojanjem i otrov neznanja.”",
   "dn16:1.19.0": "5. Opasnost slabe vrline",
   "dn16:1.19.1": "Kada je ostao kraj Nāḷande koliko je želeo, Blaženi reče poštovanom Ānandi:",
-  "dn16:1.19.2": "„Hajde, Ānanda, idemo do Pāṭaligāme.”"
+  "dn16:1.19.2": "„Hajde, Ānanda, idemo do Pāṭaligāme.”",
+  "dn16:1.19.3": "„Da, poštovani gospodine,” odgovori Ānanda."
 }
