--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -187,5 +187,6 @@
   "dn16:1.19.0": "5. Opasnost slabe vrline",
   "dn16:1.19.1": "Kada je ostao kraj Nāḷande koliko je želeo, Blaženi reče poštovanom Ānandi:",
   "dn16:1.19.2": "„Hajde, Ānanda, idemo do Pāṭaligāme.”",
-  "dn16:1.19.3": "„Da, poštovani gospodine,” odgovori Ānanda."
+  "dn16:1.19.3": "„Da, poštovani gospodine,” odgovori Ānanda.",
+  "dn16:1.19.4": "I tako Blaženi, praćen velikom grupom monaha, stiže u Pāṭaligāmu."
 }
