--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -188,5 +188,6 @@
   "dn16:1.19.1": "Kada je ostao kraj Nāḷande koliko je želeo, Blaženi reče poštovanom Ānandi:",
   "dn16:1.19.2": "„Hajde, Ānanda, idemo do Pāṭaligāme.”",
   "dn16:1.19.3": "„Da, poštovani gospodine,” odgovori Ānanda.",
-  "dn16:1.19.4": "I tako Blaženi, praćen velikom grupom monaha, stiže u Pāṭaligāmu."
+  "dn16:1.19.4": "I tako Blaženi, praćen velikom grupom monaha, stiže u Pāṭaligāmu.",
+  "dn16:1.20.1": "A nezaređeni sledbenici iz Pāṭaligāme dočuše:"
 }
