Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -189,5 +189,6 @@
   "dn16:1.19.2": "„Hajde, Ānanda, idemo do Pāṭaligāme.”",
   "dn16:1.19.3": "„Da, poštovani gospodine,” odgovori Ānanda.",
   "dn16:1.19.4": "I tako Blaženi, praćen velikom grupom monaha, stiže u Pāṭaligāmu.",
-  "dn16:1.20.1": "A nezaređeni sledbenici iz Pāṭaligāme dočuše:"
+  "dn16:1.20.1": "A nezaređeni sledbenici iz Pāṭaligāme dočuše:",
+  "dn16:1.20.2": "„Priča se da je Blaženi došao u Pāṭaligāmu.” Onda oni dođoše do Blaženog, pokloniše mu se i sedoše sa strane. Dok su tako sedeli, ovako mu rekoše:"
 }
