--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -190,5 +190,6 @@
   "dn16:1.19.3": "„Da, poštovani gospodine,” odgovori Ānanda.",
   "dn16:1.19.4": "I tako Blaženi, praćen velikom grupom monaha, stiže u Pāṭaligāmu.",
   "dn16:1.20.1": "A nezaređeni sledbenici iz Pāṭaligāme dočuše: „Priča se da je Blaženi došao u Pāṭaligāmu.”",
-  "dn16:1.20.2": "Onda oni dođoše do Blaženog, pokloniše mu se i sedoše sa strane. Dok su tako sedeli, ovako mu rekoše:"
+  "dn16:1.20.2": "Onda oni dođoše do Blaženog, pokloniše mu se i sedoše sa strane. Dok su tako sedeli, ovako mu rekoše:",
+  "dn16:1.20.3": "„Poštovani gospodine, molimo vas da prihvatite naš poziv da prenoćite u našem odmorištu.”"
 }
