--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -193,5 +193,6 @@
   "dn16:1.20.2": "Onda oni dođoše do Blaženog, pokloniše mu se i sedoše sa strane. Dok su tako sedeli, ovako mu rekoše:",
   "dn16:1.20.3": "„Poštovani gospodine, molimo vas da prihvatite naš poziv da prenoćite u našem odmorištu.”",
   "dn16:1.20.4": "I Blaženi to ćutke prihvati.",
-  "dn16:1.21.1": "Videvši da se Blaženi saglasio, nezaređeni sledbenici iz Pāṭaligāme ustadoše sa svojih mesta, pa poklonivši se Blaženom i pazeći da im on ostane sa desne strane, otidoše do odmorišta. Kada su stigli, raširiše prostirke posvuda po podu, pripremiše mesta za sedenje, napuniše posude sa vodom, upališe uljane lampe, te se vratiše do Blaženog. Kada su stigli, pokloniše mu se, pa stadoše sa strane. Stojeći tako sa strane, ovako rekoše Blaženom:"
+  "dn16:1.21.1": "Videvši da se Blaženi saglasio, nezaređeni sledbenici iz Pāṭaligāme ustadoše sa svojih mesta, pa poklonivši se Blaženom i pazeći da im on ostane sa desne strane, otidoše do odmorišta. Kada su stigli, raširiše prostirke posvuda po podu, pripremiše mesta za sedenje, napuniše posude sa vodom, upališe uljane lampe, te se vratiše do Blaženog. Kada su stigli, pokloniše mu se, pa stadoše sa strane. Stojeći tako sa strane, ovako rekoše Blaženom:",
+  "dn16:1.21.2": "„Poštovani gospodine, prostirke su raširene posvuda po podu, mesta za sedenje pripremljena, posude sa vodom napunjene, uljane lampe upaljene."
 }
