--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -197,5 +197,6 @@
   "dn16:1.21.2": "„Poštovani gospodine, prostirke su raširene posvuda po podu, mesta za sedenje pripremljena, posude sa vodom napunjene, uljane lampe upaljene.",
   "dn16:1.21.3": "„Vreme je da poštovani uradi kako misli da treba.”",
   "dn16:1.22.1": "Na to se Blaženi obuče, uze ogrtač i prosjačku zdelu, te zajedno sa monasima ode do odmorišta, opra noge,2 pa uđe u njega i sede licem okrenut prema istoku, naslonjen na središnji stub.",
-  "dn16:1.22.2": "Monasi isto tako opraše noge, pa uđoše u odmorište i sedoše uz zapadni zid, okrenuti ka istoku, tako da je Blaženi bio pred njima."
+  "dn16:1.22.2": "Monasi isto tako opraše noge, pa uđoše u odmorište i sedoše uz zapadni zid, okrenuti ka istoku, tako da je Blaženi bio pred njima.",
+  "dn16:1.22.3": "I nezaređeni sledbenici iz Pāṭaligāme opraše noge, pa uđoše u odmorište i sedoše uz istočni zid, okrenuti ka zapadu, tako da je Blaženi bio pred njima."
 }
