--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -200,5 +200,6 @@
   "dn16:1.22.2": "Monasi isto tako opraše noge, pa uđoše u odmorište i sedoše uz zapadni zid, okrenuti ka istoku, tako da je Blaženi bio pred njima.",
   "dn16:1.22.3": "I nezaređeni sledbenici iz Pāṭaligāme opraše noge, pa uđoše u odmorište i sedoše uz istočni zid, okrenuti ka zapadu, tako da je Blaženi bio pred njima.",
   "dn16:1.23.1": "Onda Blaženi reče sledbenicima iz Pāṭaligāme:",
-  "dn16:1.23.2": "„Kućedomaćini, pet je opasnosti za onoga ko je bez vrline, ko je izgubio vrlinu."
+  "dn16:1.23.2": "„Kućedomaćini, pet je opasnosti za onoga ko je bez vrline, ko je izgubio vrlinu.",
+  "dn16:1.23.3": "Kojih pet?"
 }
