--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -201,5 +201,6 @@
   "dn16:1.22.3": "I nezaređeni sledbenici iz Pāṭaligāme opraše noge, pa uđoše u odmorište i sedoše uz istočni zid, okrenuti ka zapadu, tako da je Blaženi bio pred njima.",
   "dn16:1.23.1": "Onda Blaženi reče sledbenicima iz Pāṭaligāme:",
   "dn16:1.23.2": "„Kućedomaćini, pet je opasnosti za onoga ko je bez vrline, ko je izgubio vrlinu.",
-  "dn16:1.23.3": "Kojih pet?"
+  "dn16:1.23.3": "Kojih pet?",
+  "dn16:1.23.4": "Takav zbog svoje nepromišljenosti trpi veliki gubitak imetka."
 }
