--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -202,5 +202,6 @@
   "dn16:1.23.1": "Onda Blaženi reče sledbenicima iz Pāṭaligāme:",
   "dn16:1.23.2": "„Kućedomaćini, pet je opasnosti za onoga ko je bez vrline, ko je izgubio vrlinu.",
   "dn16:1.23.3": "Kojih pet?",
-  "dn16:1.23.4": "Takav zbog svoje nepromišljenosti trpi veliki gubitak imetka."
+  "dn16:1.23.4": "Takav zbog svoje nepromišljenosti trpi veliki gubitak imetka.",
+  "dn16:1.23.5": "To je prva opasnost za njega."
 }
