--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -203,5 +203,6 @@
   "dn16:1.23.2": "„Kućedomaćini, pet je opasnosti za onoga ko je bez vrline, ko je izgubio vrlinu.",
   "dn16:1.23.3": "Kojih pet?",
   "dn16:1.23.4": "Takav zbog svoje nepromišljenosti trpi veliki gubitak imetka.",
-  "dn16:1.23.5": "To je prva opasnost za njega."
+  "dn16:1.23.5": "To je prva opasnost za njega.",
+  "dn16:1.23.6": "Dalje, onaj ko je bez vrline, ko je izgubio vrlinu, izbija na loš glas."
 }
