Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -205,5 +205,6 @@
   "dn16:1.23.4": "Takav zbog svoje nepromišljenosti trpi veliki gubitak imetka.",
   "dn16:1.23.5": "To je prva opasnost za njega.",
   "dn16:1.23.6": "Dalje, onaj ko je bez vrline, ko je izgubio vrlinu, izbija na loš glas.",
-  "dn16:1.23.7": "To je druga opasnost za njega."
+  "dn16:1.23.7": "To je druga opasnost za njega.",
+  "dn16:1.23.8": "Dalje, onaj ko je bez vrline, ko je izgubio vrlinu, u kojem god društvu da se nađe – plemića, brahmana, kućedomaćina ili asketa – oseća nesigurnost, ne sme ništa da prozbori."
 }
