--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -207,5 +207,6 @@
   "dn16:1.23.6": "Dalje, onaj ko je bez vrline, ko je izgubio vrlinu, izbija na loš glas.",
   "dn16:1.23.7": "To je druga opasnost za njega.",
   "dn16:1.23.8": "Dalje, onaj ko je bez vrline, ko je izgubio vrlinu, u kojem god društvu da se nađe – plemića, brahmana, kućedomaćina ili asketa – oseća nesigurnost, ne sme ništa da prozbori.",
-  "dn16:1.23.9": "To je treća opasnost za njega."
+  "dn16:1.23.9": "To je treća opasnost za njega.",
+  "dn16:1.23.10": "Dalje, onaj ko je bez vrline, ko je izgubio vrlinu, umire zbunjen."
 }
