--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -209,5 +209,6 @@
   "dn16:1.23.8": "Dalje, onaj ko je bez vrline, ko je izgubio vrlinu, u kojem god društvu da se nađe – plemića, brahmana, kućedomaćina ili asketa – oseća nesigurnost, ne sme ništa da prozbori.",
   "dn16:1.23.9": "To je treća opasnost za njega.",
   "dn16:1.23.10": "Dalje, onaj ko je bez vrline, ko je izgubio vrlinu, umire zbunjen.",
-  "dn16:1.23.11": "To je četvrta opasnost za njega."
+  "dn16:1.23.11": "To je četvrta opasnost za njega.",
+  "dn16:1.23.12": "Dalje, onaj ko je bez vrline, ko je izgubio vrlinu, posle sloma tela, posle smrti, preporađa se u svetu lišavanja, na lošem odredištu, u nižim svetovima, čak u paklu."
 }
