--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -211,5 +211,6 @@
   "dn16:1.23.10": "Dalje, onaj ko je bez vrline, ko je izgubio vrlinu, umire zbunjen.",
   "dn16:1.23.11": "To je četvrta opasnost za njega.",
   "dn16:1.23.12": "Dalje, onaj ko je bez vrline, ko je izgubio vrlinu, posle sloma tela, posle smrti, preporađa se u svetu lišavanja, na lošem odredištu, u nižim svetovima, čak u paklu.",
-  "dn16:1.23.13": "To je peta opasnost za njega."
+  "dn16:1.23.13": "To je peta opasnost za njega.",
+  "dn16:1.23.14": "Tih je pet opasnosti, kućedomaćini, za onoga ko je bez vrline, ko je izgubio vrlinu."
 }
