--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -215,5 +215,6 @@
   "dn16:1.23.14": "Tih je pet opasnosti, kućedomaćini, za onoga ko je bez vrline, ko je izgubio vrlinu.",
   "dn16:1.24.0": "6. Koristi od snažne vrline",
   "dn16:1.24.1": "Kućedomaćini, isto tako pet je koristi za onoga ko ima vrlinu, ko je razvio vrlinu.",
-  "dn16:1.24.2": "Kojih pet?"
+  "dn16:1.24.2": "Kojih pet?",
+  "dn16:1.24.3": "Onaj ko ima vrlinu, ko je razvio vrlinu, zbog svoje promišljenosti veliki imetak stiče."
 }
