--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -216,5 +216,6 @@
   "dn16:1.24.0": "6. Koristi od snažne vrline",
   "dn16:1.24.1": "Kućedomaćini, isto tako pet je koristi za onoga ko ima vrlinu, ko je razvio vrlinu.",
   "dn16:1.24.2": "Kojih pet?",
-  "dn16:1.24.3": "Onaj ko ima vrlinu, ko je razvio vrlinu, zbog svoje promišljenosti veliki imetak stiče."
+  "dn16:1.24.3": "Onaj ko ima vrlinu, ko je razvio vrlinu, zbog svoje promišljenosti veliki imetak stiče.",
+  "dn16:1.24.4": "To je prva korist za njega."
 }
