--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -218,5 +218,6 @@
   "dn16:1.24.2": "Kojih pet?",
   "dn16:1.24.3": "Onaj ko ima vrlinu, ko je razvio vrlinu, zbog svoje promišljenosti veliki imetak stiče.",
   "dn16:1.24.4": "To je prva korist za njega.",
-  "dn16:1.24.5": "Dalje, o onome ko ima vrlinu, ko je razvio vrlinu, širi se dobar glas."
+  "dn16:1.24.5": "Dalje, o onome ko ima vrlinu, ko je razvio vrlinu, širi se dobar glas.",
+  "dn16:1.24.6": "To je druga korist za njega."
 }
