Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -221,5 +221,6 @@
   "dn16:1.24.5": "Dalje, o onome ko ima vrlinu, ko je razvio vrlinu, širi se dobar glas.",
   "dn16:1.24.6": "To je druga korist za njega.",
   "dn16:1.24.7": "Dalje, onaj ko ima vrlinu, ko je razvio vrlinu, u kojem god društvu da se nađe – plemića, brahmana, kućedomaćina ili asketa – oseća sigurnost, sme da govori.",
-  "dn16:1.24.8": "To je treća korist za njega."
+  "dn16:1.24.8": "To je treća korist za njega.",
+  "dn16:1.24.9": "Dalje, onaj ko ima vrlinu, ko je razvio vrlinu, ne umire zbunjen."
 }
