--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -223,5 +223,6 @@
   "dn16:1.24.7": "Dalje, onaj ko ima vrlinu, ko je razvio vrlinu, u kojem god društvu da se nađe – plemića, brahmana, kućedomaćina ili asketa – oseća sigurnost, sme da govori.",
   "dn16:1.24.8": "To je treća korist za njega.",
   "dn16:1.24.9": "Dalje, onaj ko ima vrlinu, ko je razvio vrlinu, ne umire zbunjen.",
-  "dn16:1.24.10": "To je četvrta korist za njega."
+  "dn16:1.24.10": "To je četvrta korist za njega.",
+  "dn16:1.24.11": "Dalje, onaj ko ima vrlinu, ko je razvio vrlinu, posle sloma tela, posle smrti, preporađa se na dobrom odredištu, čak u nebeskom svetu."
 }
