Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -225,5 +225,6 @@
   "dn16:1.24.9": "Dalje, onaj ko ima vrlinu, ko je razvio vrlinu, ne umire zbunjen.",
   "dn16:1.24.10": "To je četvrta korist za njega.",
   "dn16:1.24.11": "Dalje, onaj ko ima vrlinu, ko je razvio vrlinu, posle sloma tela, posle smrti, preporađa se na dobrom odredištu, čak u nebeskom svetu.",
-  "dn16:1.24.12": "To je peta korist za njega."
+  "dn16:1.24.12": "To je peta korist za njega.",
+  "dn16:1.24.13": "Tih je pet koristi, kućedomaćini, za onoga ko ima vrlinu, ko je razvio vrlinu.”"
 }
