--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -227,5 +227,6 @@
   "dn16:1.24.11": "Dalje, onaj ko ima vrlinu, ko je razvio vrlinu, posle sloma tela, posle smrti, preporađa se na dobrom odredištu, čak u nebeskom svetu.",
   "dn16:1.24.12": "To je peta korist za njega.",
   "dn16:1.24.13": "Tih je pet koristi, kućedomaćini, za onoga ko ima vrlinu, ko je razvio vrlinu.”",
-  "dn16:1.25.1": "Pošto je Blaženi tokom dobrog dela noći nezaređene sledbenike iz Pāṭaligāme upućivao, podsticao, nadahnjivao i obradovao govorom o Dhammi, na kraju im reče:"
+  "dn16:1.25.1": "Pošto je Blaženi tokom dobrog dela noći nezaređene sledbenike iz Pāṭaligāme upućivao, podsticao, nadahnjivao i obradovao govorom o Dhammi, na kraju im reče:",
+  "dn16:1.25.2": "„Na izmaku je noć, kućedomaćini, vreme je da učinite ono što mislite da treba.”"
 }
