--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -230,5 +230,6 @@
   "dn16:1.25.1": "Pošto je Blaženi tokom dobrog dela noći nezaređene sledbenike iz Pāṭaligāme upućivao, podsticao, nadahnjivao i obradovao govorom o Dhammi, na kraju im reče:",
   "dn16:1.25.2": "„Na izmaku je noć, kućedomaćini, vreme je da učinite ono što mislite da treba.”",
   "dn16:1.25.3": "Na to kućedomaćini iz Pāṭaligāme, ushićeni i obradovani rečima Blaženog, ustadoše sa svojih mesta, pa poklonivši se Blaženom i pazeći da im ovaj ostane sa desne strane, otidoše.",
-  "dn16:1.25.4": "Ne dugo pošto su kućedomaćini iz Pāṭaligāme otišli, Blaženi se udalji na osamljeno mesto."
+  "dn16:1.25.4": "Ne dugo pošto su kućedomaćini iz Pāṭaligāme otišli, Blaženi se udalji na osamljeno mesto.",
+  "dn16:1.26.0": "7. Gradnja utvrđenja"
 }
