Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -231,5 +231,6 @@
   "dn16:1.25.2": "„Na izmaku je noć, kućedomaćini, vreme je da učinite ono što mislite da treba.”",
   "dn16:1.25.3": "Na to kućedomaćini iz Pāṭaligāme, ushićeni i obradovani rečima Blaženog, ustadoše sa svojih mesta, pa poklonivši se Blaženom i pazeći da im ovaj ostane sa desne strane, otidoše.",
   "dn16:1.25.4": "Ne dugo pošto su kućedomaćini iz Pāṭaligāme otišli, Blaženi se udalji na osamljeno mesto.",
-  "dn16:1.26.0": "7. Gradnja utvrđenja"
+  "dn16:1.26.0": "7. Gradnja utvrđenja",
+  "dn16:1.26.1": "A u to vreme Sunidha i Vassakārā, glavni savetnici kralja Māgadhe, u Pāṭaligāmi su podizali utvrđenje kao odbranu od napada Vađđija."
 }
