--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -233,5 +233,6 @@
   "dn16:1.25.4": "Ne dugo pošto su kućedomaćini iz Pāṭaligāme otišli, Blaženi se udalji na osamljeno mesto.",
   "dn16:1.26.0": "7. Gradnja utvrđenja",
   "dn16:1.26.1": "A u to vreme Sunidha i Vassakārā, glavni savetnici kralja Māgadhe, u Pāṭaligāmi su podizali utvrđenje kao odbranu od napada Vađđija.",
-  "dn16:1.26.2": "U isto vreme mnogo božanstava, na hiljade njih, boravila su na različitim mestima u Pāṭaligāmi."
+  "dn16:1.26.2": "U isto vreme mnogo božanstava, na hiljade njih, boravila su na različitim mestima u Pāṭaligāmi.",
+  "dn16:1.26.3": "Na istim onim mestima na kojim su boravila velika božanstva, na tim mestima su moćni gospodari i kraljevi savetnici nameravali da sebi podignu kuće."
 }
