Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -235,5 +235,6 @@
   "dn16:1.26.1": "A u to vreme Sunidha i Vassakārā, glavni savetnici kralja Māgadhe, u Pāṭaligāmi su podizali utvrđenje kao odbranu od napada Vađđija.",
   "dn16:1.26.2": "U isto vreme mnogo božanstava, na hiljade njih, boravila su na različitim mestima u Pāṭaligāmi.",
   "dn16:1.26.3": "Na istim onim mestima na kojim su boravila velika božanstva, na tim mestima su moćni gospodari i kraljevi savetnici nameravali da sebi podignu kuće.",
-  "dn16:1.27.1": "Na istim onim mestima na kojim su boravila božanstva srednjeg ranga, na tim mestima su gospodari i kraljevi savetnici srednjeg ranga nameravali da sebi podignu kuće."
+  "dn16:1.27.1": "Na istim onim mestima na kojim su boravila božanstva srednjeg ranga, na tim mestima su gospodari i kraljevi savetnici srednjeg ranga nameravali da sebi podignu kuće.",
+  "dn16:1.27.2": "Na istim onim mestima na kojim su boravila niža božanstva, na tim mestima su niži gospodari i kraljevi savetnici nameravali da sebi podignu kuće."
 }
