--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -238,5 +238,6 @@
   "dn16:1.27.1": "Na istim onim mestima na kojim su boravila božanstva srednjeg ranga, na tim mestima su gospodari i kraljevi savetnici srednjeg ranga nameravali da sebi podignu kuće.",
   "dn16:1.27.2": "Na istim onim mestima na kojim su boravila niža božanstva, na tim mestima su niži gospodari i kraljevi savetnici nameravali da sebi podignu kuće.",
   "dn16:1.27.3": "I vide Blaženi svojim duhovnim okom, pročišćenim i superiornim u odnosu na ljudsko, da su ta božanstva, na hiljade njih, zauzela zemljište u Pāṭaligāmi.",
-  "dn16:1.27.4": "Onda pred zoru, ustavši sa svog mesta, Blaženi reče poštovanom Ānandi:"
+  "dn16:1.27.4": "Onda pred zoru, ustavši sa svog mesta, Blaženi reče poštovanom Ānandi:",
+  "dn16:1.27.5": "„Ko to, Ānanda, pravi utvrđenje u Pāṭaligāmi?”"
 }
