--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -240,5 +240,6 @@
   "dn16:1.27.3": "I vide Blaženi svojim duhovnim okom, pročišćenim i superiornim u odnosu na ljudsko, da su ta božanstva, na hiljade njih, zauzela zemljište u Pāṭaligāmi.",
   "dn16:1.27.4": "Onda pred zoru, ustavši sa svog mesta, Blaženi reče poštovanom Ānandi:",
   "dn16:1.27.5": "„Ko to, Ānanda, pravi utvrđenje u Pāṭaligāmi?”",
-  "dn16:1.27.6": "„Sunidha i Vassakārā, poštovani gospodine, glavni savetnici kralja Māgadhe, podižu u Pāṭaligāmi utvrđenje kao odbranu od napada Vađđija.”"
+  "dn16:1.27.6": "„Sunidha i Vassakārā, poštovani gospodine, glavni savetnici kralja Māgadhe, podižu u Pāṭaligāmi utvrđenje kao odbranu od napada Vađđija.”",
+  "dn16:1.28.1": "„Ānanda, baš kao da su se konsultovali sa božanstvima neba trideset trojice,"
 }
