Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -242,5 +242,6 @@
   "dn16:1.27.5": "„Ko to, Ānanda, pravi utvrđenje u Pāṭaligāmi?”",
   "dn16:1.27.6": "„Sunidha i Vassakārā, poštovani gospodine, glavni savetnici kralja Māgadhe, podižu u Pāṭaligāmi utvrđenje kao odbranu od napada Vađđija.”",
   "dn16:1.28.1": "„Ānanda, baš kao da su se konsultovali sa božanstvima neba trideset trojice,",
-  "dn16:1.28.2": "tako Sunidha i Vassakārā, glavni savetnici kralja Māgadhe, podižu u Pāṭaligāmi utvrđenje kao odbranu od napada Vađđija."
+  "dn16:1.28.2": "tako Sunidha i Vassakārā, glavni savetnici kralja Māgadhe, podižu u Pāṭaligāmi utvrđenje kao odbranu od napada Vađđija.",
+  "dn16:1.28.3": "Ovde sam, Ānanda, video duhovnim okom, pročišćenim i superiornim u odnosu na ljudsko, da su božanstva, na hiljade njih, zauzela zemljište u Pāṭaligāmi."
 }
