--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -246,5 +246,6 @@
   "dn16:1.28.3": "Ovde sam, Ānanda, video duhovnim okom, pročišćenim i superiornim u odnosu na ljudsko, da su božanstva, na hiljade njih, zauzela zemljište u Pāṭaligāmi.",
   "dn16:1.28.4": "Na istim onim mestima na kojim su boravila velika božanstva, na tim mestima su moćni gospodari i kraljevi savetnici nameravali da sebi podignu kuće.",
   "dn16:1.28.5": "Na istim onim mestima na kojim su boravila božanstva srednjeg ranga, na tim mestima su gospodari i kraljevi savetnici srednjeg ranga nameravali da sebi podignu kuće.",
-  "dn16:1.28.6": "Na istim onim mestima na kojim su boravila niža božanstva, na tim mestima su niži gospodari i kraljevi savetnici nameravali da sebi podignu kuće."
+  "dn16:1.28.6": "Na istim onim mestima na kojim su boravila niža božanstva, na tim mestima su niži gospodari i kraljevi savetnici nameravali da sebi podignu kuće.",
+  "dn16:1.28.7": "Ānanda, sve dok postoji područje Arijevaca, sve dok se ovde putevi ukrštaju, ovaj trgovački grad Pāṭaliputta će biti glavni među gradovima."
 }
