Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -248,5 +248,6 @@
   "dn16:1.28.5": "Na istim onim mestima na kojim su boravila božanstva srednjeg ranga, na tim mestima su gospodari i kraljevi savetnici srednjeg ranga nameravali da sebi podignu kuće.",
   "dn16:1.28.6": "Na istim onim mestima na kojim su boravila niža božanstva, na tim mestima su niži gospodari i kraljevi savetnici nameravali da sebi podignu kuće.",
   "dn16:1.28.7": "Ānanda, sve dok postoji područje Arijevaca, sve dok se ovde putevi ukrštaju, ovaj trgovački grad Pāṭaliputta će biti glavni među gradovima.",
-  "dn16:1.28.8": "Ali za Pāṭaliputtu, Ānanda, postoje  ove tri opasnosti:"
+  "dn16:1.28.8": "Ali za Pāṭaliputtu, Ānanda, postoje  ove tri opasnosti:",
+  "dn16:1.28.9": "požar, poplava i razjedinjenost."
 }
