--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -250,5 +250,6 @@
   "dn16:1.28.7": "Ānanda, sve dok postoji područje Arijevaca, sve dok se ovde putevi ukrštaju, ovaj trgovački grad Pāṭaliputta će biti glavni među gradovima.",
   "dn16:1.28.8": "Ali za Pāṭaliputtu, Ānanda, postoje  ove tri opasnosti:",
   "dn16:1.28.9": "požar, poplava i razjedinjenost.",
-  "dn16:1.29.1": "Onda Sunidha i Vassakārā, glavni savetnici kralja Māgadhe, dođoše do Blaženog i učtivo se sa njim pozdraviše."
+  "dn16:1.29.1": "Onda Sunidha i Vassakārā, glavni savetnici kralja Māgadhe, dođoše do Blaženog i učtivo se sa njim pozdraviše.",
+  "dn16:1.29.2": "Kada taj učtivi i prijateljski razgovor bi završen, stadoše oni sa strane i rekoše mu:"
 }
