--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -253,5 +253,6 @@
   "dn16:1.29.1": "Onda Sunidha i Vassakārā, glavni savetnici kralja Māgadhe, dođoše do Blaženog i učtivo se sa njim pozdraviše.",
   "dn16:1.29.2": "Kada taj učtivi i prijateljski razgovor bi završen, stadoše oni sa strane i rekoše mu:",
   "dn16:1.29.3": "„Neka Blaženi zajedno sa monaškom zajednicom prihvati od nas poziv za obrok sutra.”",
-  "dn16:1.29.4": "I Blaženi to ćutke prihvati."
+  "dn16:1.29.4": "I Blaženi to ćutke prihvati.",
+  "dn16:1.30.1": " Znajući da je Blaženi prihvatio, Sunidha i Vassakārā, glavni savetnici kralja Māgadhe, otidoše svome domu. Kada su stigli, dadoše da se pripreme različita ukusna jela i mnogo poslastica, pa poručiše Blaženom:"
 }
