--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -257,5 +257,6 @@
   "dn16:1.30.1": " Znajući da je Blaženi prihvatio, Sunidha i Vassakārā, glavni savetnici kralja Māgadhe, otidoše svome domu. Kada su stigli, dadoše da se pripreme različita ukusna jela i mnogo poslastica, pa poručiše Blaženom:",
   "dn16:1.30.2": "„Vreme je, učitelju Gotama, obrok je spreman”.",
   "dn16:1.30.3": "A ujutru se Blaženi obuče, uze svoju prosjačku zdelu i gornji ogrtač, pa praćen velikom grupom monaha krenu put doma Sunidhe i Vassakāre, glavnih savetnika kralja Māgadhe.",
-  "dn16:1.30.4": "Kad je stigao, sede na unapred pripremljeno mesto. A Sunidha i Vassakāra, glavni savetnici kralja Māgadhe, svojim su rukama poslužili i različitim vrstama jela ugostili i nahranili monašku zajednicu predvođenu Blaženim."
+  "dn16:1.30.4": "Kad je stigao, sede na unapred pripremljeno mesto. A Sunidha i Vassakāra, glavni savetnici kralja Māgadhe, svojim su rukama poslužili i različitim vrstama jela ugostili i nahranili monašku zajednicu predvođenu Blaženim.",
+  "dn16:1.30.5": "Kada je Blaženi jeo i oprao ruke i prosjačku zdelu, Sunidha i Vassakāra odabraše niža mesta i sedoše sa strane."
 }
