--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -258,5 +258,6 @@
   "dn16:1.30.2": "„Vreme je, učitelju Gotama, obrok je spreman”.",
   "dn16:1.30.3": "A ujutru se Blaženi obuče, uze svoju prosjačku zdelu i gornji ogrtač, pa praćen velikom grupom monaha krenu put doma Sunidhe i Vassakāre, glavnih savetnika kralja Māgadhe.",
   "dn16:1.30.4": "Kad je stigao, sede na unapred pripremljeno mesto. A Sunidha i Vassakāra, glavni savetnici kralja Māgadhe, svojim su rukama poslužili i različitim vrstama jela ugostili i nahranili monašku zajednicu predvođenu Blaženim.",
-  "dn16:1.30.5": "Kada je Blaženi jeo i oprao ruke i prosjačku zdelu, Sunidha i Vassakāra odabraše niža mesta i sedoše sa strane."
+  "dn16:1.30.5": "Kada je Blaženi jeo i oprao ruke i prosjačku zdelu, Sunidha i Vassakāra odabraše niža mesta i sedoše sa strane.",
+  "dn16:1.31.1": "Dok su tako sedeli sa strane, Blaženi izrazi svoje odobravanje ovim stihovima:"
 }
