Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -260,5 +260,6 @@
   "dn16:1.30.4": "Kad je stigao, sede na unapred pripremljeno mesto. A Sunidha i Vassakāra, glavni savetnici kralja Māgadhe, svojim su rukama poslužili i različitim vrstama jela ugostili i nahranili monašku zajednicu predvođenu Blaženim.",
   "dn16:1.30.5": "Kada je Blaženi jeo i oprao ruke i prosjačku zdelu, Sunidha i Vassakāra odabraše niža mesta i sedoše sa strane.",
   "dn16:1.31.1": "Dok su tako sedeli sa strane, Blaženi izrazi svoje odobravanje ovim stihovima:",
-  "dn16:1.31.2": "„Na mestu na kojem živi,"
+  "dn16:1.31.2": "„Na mestu na kojem živi,",
+  "dn16:1.31.3": "nahranivši onoga ko je"
 }
