--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -261,5 +261,6 @@
   "dn16:1.30.5": "Kada je Blaženi jeo i oprao ruke i prosjačku zdelu, Sunidha i Vassakāra odabraše niža mesta i sedoše sa strane.",
   "dn16:1.31.1": "Dok su tako sedeli sa strane, Blaženi izrazi svoje odobravanje ovim stihovima:",
   "dn16:1.31.2": "„Na mestu na kojem živi,",
-  "dn16:1.31.3": "nahranivši onoga ko je"
+  "dn16:1.31.3": "nahranivši onoga ko je",
+  "dn16:1.31.4": "mudar i čestit, obuzdan,"
 }
