--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -262,5 +262,6 @@
   "dn16:1.31.1": "Dok su tako sedeli sa strane, Blaženi izrazi svoje odobravanje ovim stihovima:",
   "dn16:1.31.2": "„Na mestu na kojem živi,",
   "dn16:1.31.3": "nahranivši onoga ko je",
-  "dn16:1.31.4": "mudar i čestit, obuzdan,"
+  "dn16:1.31.4": "mudar i čestit, obuzdan,",
+  "dn16:1.31.5": "ko svetačkim životom živi,"
 }
