--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -263,5 +263,6 @@
   "dn16:1.31.2": "„Na mestu na kojem živi,",
   "dn16:1.31.3": "nahranivši onoga ko je",
   "dn16:1.31.4": "mudar i čestit, obuzdan,",
-  "dn16:1.31.5": "ko svetačkim životom živi,"
+  "dn16:1.31.5": "ko svetačkim životom živi,",
+  "dn16:1.31.6": "neka svoj dar posveti bogovima "
 }
