Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -264,5 +264,6 @@
   "dn16:1.31.3": "nahranivši onoga ko je",
   "dn16:1.31.4": "mudar i čestit, obuzdan,",
   "dn16:1.31.5": "ko svetačkim životom živi,",
-  "dn16:1.31.6": "neka svoj dar posveti bogovima "
+  "dn16:1.31.6": "neka svoj dar posveti bogovima ",
+  "dn16:1.31.7": "koji su na tom mestu."
 }
