--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -265,5 +265,6 @@
   "dn16:1.31.4": "mudar i čestit, obuzdan,",
   "dn16:1.31.5": "ko svetačkim životom živi,",
   "dn16:1.31.6": "neka svoj dar posveti bogovima ",
-  "dn16:1.31.7": "koji su na tom mestu."
+  "dn16:1.31.7": "koji su na tom mestu.",
+  "dn16:1.31.8": "Tako slavljeni, oni slave njega,"
 }
