Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -266,5 +266,6 @@
   "dn16:1.31.5": "ko svetačkim životom živi,",
   "dn16:1.31.6": "neka svoj dar posveti bogovima ",
   "dn16:1.31.7": "koji su na tom mestu.",
-  "dn16:1.31.8": "Tako slavljeni, oni slave njega,"
+  "dn16:1.31.8": "Tako slavljeni, oni slave njega,",
+  "dn16:1.31.9": "tako poštovani, njega poštuju."
 }
