Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -268,5 +268,6 @@
   "dn16:1.31.7": "koji su na tom mestu.",
   "dn16:1.31.8": "Tako slavljeni, oni slave njega,",
   "dn16:1.31.9": "tako poštovani, njega poštuju.",
-  "dn16:1.31.10": "Saosećanja za njega imaju,"
+  "dn16:1.31.10": "Saosećanja za njega imaju,",
+  "dn16:1.31.11": "kao i majka za dete svoje."
 }
