Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -271,5 +271,6 @@
   "dn16:1.31.10": "Saosećanja za njega imaju,",
   "dn16:1.31.11": "kao i majka za dete svoje.",
   "dn16:1.31.12": "A čovek bogovima mio,",
-  "dn16:1.31.13": "uvek vidi ono što je dobro.”"
+  "dn16:1.31.13": "uvek vidi ono što je dobro.”",
+  "dn16:1.31.14": "Kada je tako Sunidhi i Vassakāri, glavnim savetnicima kralja Māgadhe, izrazio svoje zadovoljstvo, Blaženi usta sa mesta na kojem je sedeo i otide."
 }
