Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -275,5 +275,6 @@
   "dn16:1.31.14": "Kada je tako Sunidhi i Vassakāri, glavnim savetnicima kralja Māgadhe, izrazio svoje zadovoljstvo, Blaženi usta sa mesta na kojem je sedeo i otide.",
   "dn16:1.32.1": "A tom prilikom su Sunidha i Vassakārā pratili Blaženog u stopu (razmišljajući):",
   "dn16:1.32.2": "„Na koju gradsku kapiju asketa Gotama bude izašao, ta će se zvati ’Gotamina kapija’.",
-  "dn16:1.32.3": "Na kojem gazu asketa Gotama bude prešao reku Gang, taj će se zvati ’Gotamin gaz’.”"
+  "dn16:1.32.3": "Na kojem gazu asketa Gotama bude prešao reku Gang, taj će se zvati ’Gotamin gaz’.”",
+  "dn16:1.32.4": "I zaista, na koju gradsku kapiju je asketa Gotama izašao, ta postade „Gotamina kapija.”"
 }
