Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -285,5 +285,6 @@
   "dn16:1.34.2": "Onda Blaženi, razumevši značenje svega toga, izgovori ove nadahnute reči:",
   "dn16:1.34.3": "„Oni koji pređu uskomešanu bujicu, čine to ",
   "dn16:1.34.4": "podigavši most; takvi za sobom močvaru ostave.",
-  "dn16:1.34.5": "I dok obični ljudi još uvek splav svezuju,"
+  "dn16:1.34.5": "I dok obični ljudi još uvek splav svezuju,",
+  "dn16:1.34.6": "oštroumni su već na obali drugoj.”"
 }
