Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -135,7 +135,7 @@
   "dn16:1.12.6": "otrov žudnje za čulnim zadovoljstvima, otrov žudnje za večnim postojanjem i otrov neznanja.”",
   "dn16:1.13.1": "Kada je ostao kraj Rāđagahe koliko je želeo, Blaženi reče poštovanom Ānandi:",
   "dn16:1.13.2": "„Hajde, Ānanda, idemo do Ambalaṭṭhike.”",
-  "dn16:1.13.3": "„Da, poštovani gospodine,“ odgovori Ānanda.",
+  "dn16:1.13.3": "„Da, poštovani gospodine,” odgovori Ānanda.",
   "dn16:1.13.4": "I tako Blaženi, praćen velikom grupom monaha, stiže u Ambalaṭṭhiku.",
   "dn16:1.14.1": "Tu se smestio u odmorištu koje je podigao kralj.",
   "dn16:1.14.2": "Dok je tu boravio, Blaženi je često govorio monasima o Dhammi:",
