Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -292,5 +292,6 @@
   "dn16:2.1.2": "„Hajde, Ānanda, idemo do Koṭigāme.”",
   "dn16:2.1.3": "„Da, poštovani gospodine,” odgovori Ānanda.",
   "dn16:2.1.4": "I tako Blaženi, praćen velikom grupom monaha, stiže u Koṭigāmu.",
-  "dn16:2.1.5": "Tu se on smestio."
+  "dn16:2.1.5": "Tu se on smestio.",
+  "dn16:2.2.1": "I tu on ovako reče monasima:"
 }
