Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -298,5 +298,6 @@
   "dn16:2.2.3": "A koje četiri?",
   "dn16:2.2.4": "Zato što nismo razumeli, zato što nismo proniknuli u plemenitu istinu o patnji,",
   "dn16:2.2.5": "plemenitu istinu o nastanku patnje,",
-  "dn16:2.2.6": "plemenitu istinu o prestanku patnje"
+  "dn16:2.2.6": "plemenitu istinu o prestanku patnje",
+  "dn16:2.2.7": "i plemenitu istinu o putu koji vodi do prestanka patnje."
 }
