Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -303,5 +303,5 @@
   "dn16:2.2.8": "Ali sada je, monasi, shvaćena, sada je proniknuta plemenita istina o patnji, plemenita istina o nastanku patnje, plemenita istina o prestanku patnje i plemenita istina o putu koji vodi do prestanka patnje. Razorena je žudnja za večnim postojanjem, uništeno ono što vodi ka preporađanju, nema više novih života.”",
   "dn16:2.3.1": "Tako reče Blaženi.",
   "dn16:2.3.2": "A zatim i ovo dodade učitelj:",
-  "dn16:2.3.3": "„Zato što ne videsmo toliko dugo"
+  "dn16:2.3.3": "„Zato što četiri plemenite istine"
 }
