Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -305,5 +305,6 @@
   "dn16:2.3.2": "A zatim i ovo dodade učitelj:",
   "dn16:2.3.3": "„Zato što četiri plemenite istine",
   "dn16:2.3.4": "toliko dugo ne videsmo;",
-  "dn16:2.3.5": "dugo je bilo i naše putovanje"
+  "dn16:2.3.5": "dugo je bilo i naše putovanje",
+  "dn16:2.3.6": "iz života u život."
 }
