Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -308,5 +308,6 @@
   "dn16:2.3.5": "dugo je bilo i naše putovanje",
   "dn16:2.3.6": "iz života u život.",
   "dn16:2.3.7": "Ali sada kada su istine uočene,",
-  "dn16:2.3.8": "vezanost za preporađanje nestala je."
+  "dn16:2.3.8": "vezanost za preporađanje nestala je.",
+  "dn16:2.3.9": "Presečen je koren patnje,"
 }
