Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -310,5 +310,6 @@
   "dn16:2.3.7": "Ali sada kada su istine uočene,",
   "dn16:2.3.8": "vezanost za preporađanje nestala je.",
   "dn16:2.3.9": "Presečen je koren patnje,",
-  "dn16:2.3.10": "novih života više nema.”"
+  "dn16:2.3.10": "novih života više nema.”",
+  "dn16:2.4.1": "Dok je živeo kraj Koṭigāme, Blaženi je često govorio monasima o Dhammi:"
 }
