Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -312,5 +312,6 @@
   "dn16:2.3.9": "Presečen je koren patnje,",
   "dn16:2.3.10": "novih života više nema.”",
   "dn16:2.4.1": "Dok je živeo kraj Koṭigāme, Blaženi je često govorio monasima o Dhammi:",
-  "dn16:2.4.2": "„Postoji vrlina, postoji koncentracija, postoji mudrost."
+  "dn16:2.4.2": "„Postoji vrlina, postoji koncentracija, postoji mudrost.",
+  "dn16:2.4.3": "Kada se vežba zajedno sa vrlinom, koncentracija donosi veliki plod, velike zasluge."
 }
