Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -318,5 +318,6 @@
   "dn16:2.4.5": "Kada se vežba sa mudrošću, um postaje potpuno oslobođen nečistoća, a to su ",
   "dn16:2.4.6": "otrov žudnje za čulnim zadovoljstvima, otrov žudnje za večnim postojanjem i otrov neznanja.”",
   "dn16:2.5.0": "9. Smrt u Nādiki",
-  "dn16:2.5.1": "Kada je ostao kraj Koṭigāme koliko je želeo, Blaženi reče poštovanom Ānandi:"
+  "dn16:2.5.1": "Kada je ostao kraj Koṭigāme koliko je želeo, Blaženi reče poštovanom Ānandi:",
+  "dn16:2.5.2": "„Hajde, Ānanda, idemo do Nādike.”"
 }
