Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -320,5 +320,6 @@
   "dn16:2.5.0": "9. Smrt u Nādiki",
   "dn16:2.5.1": "Kada je ostao kraj Koṭigāme koliko je želeo, Blaženi reče poštovanom Ānandi:",
   "dn16:2.5.2": "„Hajde, Ānanda, idemo do Nādike.”",
-  "dn16:2.5.3": "„Da, poštovani gospodine,” odgovori Ānanda."
+  "dn16:2.5.3": "„Da, poštovani gospodine,” odgovori Ānanda.",
+  "dn16:2.5.4": "I tako Blaženi, praćen velikom grupom monaha, stiže u Nādiku."
 }
