Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -322,5 +322,6 @@
   "dn16:2.5.2": "„Hajde, Ānanda, idemo do Nādike.”",
   "dn16:2.5.3": "„Da, poštovani gospodine,” odgovori Ānanda.",
   "dn16:2.5.4": "I tako Blaženi, praćen velikom grupom monaha, stiže u Nādiku.",
-  "dn16:2.5.5": "Tu se smestio u dvorani od cigala."
+  "dn16:2.5.5": "Tu se smestio u dvorani od cigala.",
+  "dn16:2.6.1": "Onda poštovani Ānanda dođe do Blaženog, pokloni mu se i sede sa strane. Sedeći tako, reče on Blaženom:"
 }
