Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -329,5 +329,6 @@
   "dn16:2.6.4": "Nezaređeni sledbenik po imenu Sudatto je umro u Nādiki. Kakva je njegova sudbina, koje je mesto njegovog preporađanja?",
   "dn16:2.6.5": "Nezaređena sledbenica po imenu Suđātā je umrla u Nādiki. Kakva je njena sudbina, koje je mesto njenog preporađanja?",
   "dn16:2.6.6": "Nezaređeni sledbenik po imenu Kukkuta je umro u Nādiki. Kakva je njegova sudbina, koje je mesto njegovog preporađanja?",
-  "dn16:2.6.7": "Nezaređeni sledbenik po imenu Kālimba…"
+  "dn16:2.6.7": "Nezaređeni sledbenik po imenu Kālimba…",
+  "dn16:2.6.8": "Nezaređeni sledbenik po imenu Nikaṭo…"
 }
