Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -332,5 +332,6 @@
   "dn16:2.6.7": "Nezaređeni sledbenik po imenu Kālimba…",
   "dn16:2.6.8": "Nezaređeni sledbenik po imenu Nikaṭo…",
   "dn16:2.6.9": "Nezaređeni sledbenik po imenu Katissaha…",
-  "dn16:2.6.10": "Nezaređeni sledbenik po imenu Tuṭṭha…"
+  "dn16:2.6.10": "Nezaređeni sledbenik po imenu Tuṭṭha…",
+  "dn16:2.6.11": "Nezaređeni sledbenik po imenu Santuṭṭha…"
 }
