Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -334,5 +334,6 @@
   "dn16:2.6.9": "Nezaređeni sledbenik po imenu Katissaha…",
   "dn16:2.6.10": "Nezaređeni sledbenik po imenu Tuṭṭha…",
   "dn16:2.6.11": "Nezaređeni sledbenik po imenu Santuṭṭha…",
-  "dn16:2.6.12": "Nezaređeni sledbenik po imenu Bhaddha…"
+  "dn16:2.6.12": "Nezaređeni sledbenik po imenu Bhaddha…",
+  "dn16:2.6.13": "Nezaređeni sledbenik po imenu Subhadda je umro u Nādiki. Kakva je njegova sudbina, koje je mesto njegovog preporađanja?"
 }
