Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -342,5 +342,6 @@
   "dn16:2.7.4": "Nezaređena sledbenica Suđātā, Ānanda, raskinula je tri okova i ušla u tok, tako da više ne može pasti u stanje patnje i sigurno će dostići krajnji cilj oslobođenja.",
   "dn16:2.7.5": "Nezaređeni sledbenik Kukkuta je raskinuo tri okova i spontano se preporodio u drugom svetu, tako da se više nikada ne vrati u ovaj.",
   "dn16:2.7.6": "Nezaređeni sledbenici Kāḷimbo…",
-  "dn16:2.7.7": "Nikaṭo…"
+  "dn16:2.7.7": "Nikaṭo…",
+  "dn16:2.7.8": "Kiṭissaho…"
 }
