Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -343,5 +343,6 @@
   "dn16:2.7.5": "Nezaređeni sledbenik Kukkuta je raskinuo tri okova i spontano se preporodio u drugom svetu, tako da se više nikada ne vrati u ovaj.",
   "dn16:2.7.6": "Nezaređeni sledbenici Kāḷimbo…",
   "dn16:2.7.7": "Nikaṭo…",
-  "dn16:2.7.8": "Kiṭissaho…"
+  "dn16:2.7.8": "Kiṭissaho…",
+  "dn16:2.7.9": "Tuṭṭho…"
 }
