Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -344,5 +344,6 @@
   "dn16:2.7.6": "Nezaređeni sledbenici Kāḷimbo…",
   "dn16:2.7.7": "Nikaṭo…",
   "dn16:2.7.8": "Kiṭissaho…",
-  "dn16:2.7.9": "Tuṭṭho…"
+  "dn16:2.7.9": "Tuṭṭho…",
+  "dn16:2.7.10": "Santuṭṭho…"
 }
