--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -345,5 +345,6 @@
   "dn16:2.7.7": "Nikaṭo…",
   "dn16:2.7.8": "Kiṭissaho…",
   "dn16:2.7.9": "Tuṭṭho…",
-  "dn16:2.7.10": "Santuṭṭho…"
+  "dn16:2.7.10": "Santuṭṭho…",
+  "dn16:2.7.11": "Bhadda…"
 }
