Translations by sabbamitta to translation/de/sabbamitta/sutta/an/an3/an3.20_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/an/an3/an3.20_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an3/an3.20_translation-de-sabbamitta.json
@@ -10,7 +10,7 @@
   "an3.20:1.6": "‚Diese Ware kann ich zu diesem Preis kaufen, zu diesem Preis verkaufen. So viel muss ich investieren und werde so viel Gewinn erhalten.‘ ",
   "an3.20:1.7": "So sieht ein Händler klar. ",
   "an3.20:2.1": "Und wie ist ein Händler unermüdlich? ",
-  "an3.20:2.2": "Es ist, wenn ein Händler Geschick beim Kauf und Verkauf seiner Produkte zeigt. ",
+  "an3.20:2.2": "Es ist, wenn ein Händler Geschick beim Kauf und Verkauf seiner Waren zeigt. ",
   "an3.20:2.3": "So ist ein Kaufmann unermüdlich. ",
   "an3.20:3.1": "Und wie hat ein Kaufmann Förderer? ",
   "an3.20:3.2": "Es ist, wenn reiche, wohlhabende und vermögende Hausbesitzerinnen oder Kinder von Hausbesitzern von ihm wissen: ",
