Translations by sabbamitta to translation/de/sabbamitta/sutta/dn/dn27_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/dn/dn27_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/dn/dn27_translation-de-sabbamitta.json
@@ -232,7 +232,7 @@
   "dn27:23.5": "Was zu jener Zeit als geringer galt, gilt heutzutage als das Beste. ",
   "dn27:23.6": "Und so, Vāseṭṭha, wurden die alten, ursprünglichen Ausdrücke für den Kreis der Brahmanen geschaffen; für eben diese Wesen, keine anderen; für die, die ihnen gleichen, nicht für Ungleiche; rechtmäßig, nicht unrechtmäßig. ",
   "dn27:23.7": "Denn, Vāseṭṭha, Grundsätze sind das erste Ding für die Menschen, sowohl in diesem als auch im nächsten Leben. ",
-  "dn27:24.0": "12. Der Kreis der Kaufleute ",
+  "dn27:24.0": "12. Der Kreis der Händler ",
   "dn27:24.1": "Manche dieser Wesen nahmen ein aktives Sexualleben auf und widmeten sich verschiedenen Berufen. ",
   "dn27:24.2": "‚Sie nehmen ein aktives Sexualleben auf und widmen sich verschiedenen Berufen‘ ist die Bedeutung von ‚Kaufmann‘, des Ausdrucks, der eigens für sie erdacht wurde. ",
   "dn27:24.3": "Und so, Vāseṭṭha, wurde der alte, ursprüngliche Ausdruck für den Kreis der Kaufleute geschaffen; für eben diese Wesen, keine anderen; für die, die ihnen gleichen, nicht für Ungleiche; rechtmäßig, nicht unrechtmäßig. ",
