Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn93_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn93_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn93_translation-de-sabbamitta.json
@@ -57,5 +57,6 @@
   "mn93:7.5": "Wenn ein Adliger lebende Geschöpfe töten, stehlen und sexuelle Verfehlungen begehen würde; wenn er falsche, entzweiende, harte oder unsinnige Rede gebrauchen würde; wenn er begehrlich und böswillig wäre und falsche Ansicht hätte; und wenn sein Körper auseinanderbräche, nach dem Tod, würde er an einem verlorenen Ort wiedergeboren, einem schlechten Ort, in der Unterwelt, der Hölle – könnte das nur einem Adligen widerfahren und keinem Brahmanen? ",
   "mn93:7.6": "Oder wenn ein Händler ",
   "mn93:7.7": "oder ein Arbeiter das Gleiche täte – könnte das nur einem Arbeiter widerfahren und keinem Brahmanen?“ ",
-  "mn93:7.8": "„Nein, Meister Gotama. "
+  "mn93:7.8": "„Nein, Meister Gotama. ",
+  "mn93:7.9": "Wenn sie das Gleiche täten, würde einem Adligen, einem Brahmanen, einem Händler oder einem Arbeite das gleiche Ergebnis widerfahren. "
 }
