Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn93_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn93_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn93_translation-de-sabbamitta.json
@@ -58,5 +58,6 @@
   "mn93:7.6": "Oder wenn ein Händler ",
   "mn93:7.7": "oder ein Arbeiter das Gleiche täte – könnte das nur einem Arbeiter widerfahren und keinem Brahmanen?“ ",
   "mn93:7.8": "„Nein, Meister Gotama. ",
-  "mn93:7.9": "Wenn sie das Gleiche täten, würde einem Adligen, einem Brahmanen, einem Händler oder einem Arbeite das gleiche Ergebnis widerfahren. "
+  "mn93:7.9": "Wenn sie das Gleiche täten, würde einem Adligen, einem Brahmanen, einem Händler oder einem Arbeite das gleiche Ergebnis widerfahren. ",
+  "mn93:7.13": "Wenn jemand aus irgendeiner der vier Kasten lebende Geschöpfe töten, stehlen und sexuelle Verfehlungen begehen würde; wenn er falsche, entzweiende, harte oder unsinnige Rede gebrauchen würde; wenn er begehrlich und böswillig wäre und falsche Ansicht hätte, dann würde er, wenn sein Körper auseinanderbräche, nach dem Tod, an einem verlorenen Ort wiedergeboren werden, einem schlechten Ort, in der Unterwelt, der Hölle.“ "
 }
